# ai-engineering-in-production

./: .gitignore  README.md  pyproject.toml
editions/004-tracing-before-evaluation/: .env.example  README.md  demo.py  requirements.txt
editions/005-building-your-first-evaluators/: README.md  dataset.py  demo.py  llm_utils.py  pyproject.toml  real_inference.py
editions/007-building-your-first-evaluation-dataset/: .env.example  README.md  config.py  dataset.py  evaluators.py  real_inference.py  requirements.txt
