[project]
name = "ai-engineering-in-production"
version = "0.1.0"
description = "Runnable demos for the AI Engineering In Production newsletter"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "wandb>=0.18.0",
    "weave>=0.52.0",
]

[tool.uv.workspace]
members = [
    "editions/005-building-your-first-evaluators",
]
